Update openapi to generate tweet post and get API
